--- a/hjemmeside/index.html
+++ b/hjemmeside/index.html
@@ -16,6 +16,6 @@
         
     </center>
     <a href="https://www.seterra.com"  target="_blank"> overspringshandling</a>
-    
+    <a href="https://www.ipho2013.dk/fysikolympiade/fysikolympiade-dkfinaleopg.htm" target="_blank">jeg kan også godt lide fysik</a>
 </body>
 </html>
