--- a/hjemmeside v2/index.html
+++ b/hjemmeside v2/index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hjem</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <center>
     <nav class="navbar">
         <ul class="nav-list">
             <li class="nav-item"><a>Hjem</a></li>
-            <li class="nav-item"><a>222</a></li>
+            <li class="nav-item"><a>Seje ting</a></li>
             <li class="nav-item"><a href="portfolie.html">Portfolie</a></li>
+            
         </ul>
     </nav>
+    
     <h1>Velkommen til min hjemmeside!</h1>
     <p>Jeg har informatik C på Rysensteen Gymnasium, og her er en hjemmeside hvor man kan se hvad jeg laver.</p>
-    <img src="billeder/mig.JPG" width="60%">
-
+    <img src="billeder/mig.JPG" width="100%">
+</center>
 </body>
 </html>
