--- a/hjemmeside v2/portfolie.html
+++ b/hjemmeside v2/portfolie.html
@@ -80,11 +80,11 @@ I logbogen skal I dokumentere arbejdsprocessen og produktet undervejs.
 <h3>Kernefaciliteter og effekterne</h3>
 <p>Som løsning på denne problemstilling har vi udviklet et program, der kan identificere et "spænd" (uddybes senere) af en farve, og herefter ændre RGB-værdierne af pixelsne
     i dette spænd. Det, som vi helt konkret har brugt det til, er at ændre på menneskers hudfarve, f.eks. ved at gøre 
-    Elon Musk grøn, så han ligner den marsmand, han så stærkt ønsker at blive. Man kan ændre i den tilføjede RGB-værdi 
+    Obama lilla (billedet er fra Wikipedia og er i public domain). Man kan ændre i den tilføjede RGB-værdi 
 ved at skyde på slidersne.
 </p>
 
-<img src="billeder/grøn elon.png" width="100%">
+<img src="billeder/obamalilla.png" width="100%">
 
 <h3>
     Manipulation på pixelniveau 
