--- a/hjemmeside v2/ting.html
+++ b/hjemmeside v2/ting.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seje ting</title>
+    <title>Portfolie</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
+    <nav class="navbar">
+        <ul class="nav-list">
+            <li class="nav-item"><a href="index.html">Hjem</a></li>
+            <li class="nav-item"><a href="ting.html">ting</a></li>
+            <li class="nav-item"><a href="portfolie.html">Portfolie</a></li>
+        </ul>
+    </nav>
     
+
+    <center>
+        <img src="billeder/mig.JPG" width="100%">
+    <p>Her er et billede af mig med min bue</p>
+    <img src="billeder/fyik.jpg" width="100%">
+    <p>Her er et billede af mig til scienceolympiadeeventet</p>
+    </center>
 </body>
 </html>
